Imported Mangle-WASM module

--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DevToolKit</title>
-  <link rel="stylesheet" href="popup.css">
-</head>
-<body>
-  <h1>DevToolKit</h1>
-  <div id="content-container">
-    <button id="summarize-button">Summarize</button>
-    <div id="results"></div>
-  </div>
-  <script type="module" src="popup.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>DevToolKit</title>
+        <link rel="stylesheet" href="popup.css" />
+    </head>
+    <body>
+        <h1>DevToolKit</h1>
+        <div id="content-container">
+            <button id="summarize-button">Summarize</button>
+            <button id="test-button">Test me</button>
+            <div id="results"></div>
+        </div>
+        <script type="module" src="popup.js"></script>
+    </body>
 </html>
